# handbook

./: .gitignore  .mcp.json  404.html  CHANGELOG.md  CLAUDE.md  README.md  index.html  mkdocs.private.yml  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs-gates.yml  handbook.yml
Billbird/: index.html
Billbird/api-tokens/: index.html
Billbird/architecture/: index.html
Billbird/client-attribution/: index.html
Billbird/commands/: index.html
Billbird/configuration/: index.html
Billbird/contributing/: index.html
Billbird/corrections/: index.html
Billbird/dev-time-hook/: index.html
Billbird/labels/: index.html
Billbird/operations/: index.html
Billbird/self-hosting/: index.html
Billbird/setup/: index.html
Billbird/webhook-idempotency/: index.html
Gitsweeper/: index.html
Gitsweeper/mcp/: index.html
Gitsweeper/reconcile/: index.html
Wanderer/: index.html
ash-nazg/: index.html
billbird-client/: index.html
certswap/: index.html
conventies/: index.html
crible/: index.html
docs/: conventies.md  index.md
estafette/: index.html
habitat/: audit-dashboard.html  index.html
handbook_mcp/: __init__.py
homelab/: index.html
inventory/: repos.json  repos.md
iso-audit/: index.html
openspec/: PROMPT.md  project.md
personal-handbook-openspec/: PROMPT.md
scripts/: build-private.sh  check_contract.py  check_drift.py  check_freshness.py  gen_imports.py  test_mcp.py
search/: search_index.json
skill-forge/: index.html
wordsworth/: index.html
workstation-security/: index.html
zeef/: index.html
(+192 files in other folders)
