[project]
name = "handbook"
version = "0.1.0"
description = "Personal handbook hub: aggregeert docs van alle persoonlijke repos at build time"
requires-python = ">=3.11"
license = "EUPL-1.2"
dependencies = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-multirepo-plugin>=0.8",
]

[tool.uv]
package = false
